Enabled inferred relations on individuals (no link)